@@ -12,6 +12,8 @@ require 'spec/matchers/respond_to'
 require 'spec/matchers/satisfy'
 require 'spec/matchers/throw_symbol'
 require 'spec/matchers/operator_matcher'
+require 'spec/matchers/anything'
+require 'spec/matchers/boolean'
 
 module Spec
 
